json server ready

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,9 +1,11 @@
-<div>
-    <form class="example-form">
-        <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>Superheroe</mat-label>
-            <input matInput placeholder="Ingrese su búsqueda">
-        </mat-form-field>
-    </form>
-    <button mat-raised-button color="primary" class="mat-button-lg">Primary</button>
-</div>
+<mat-grid-list cols="6" rowHeight="3:1">
+    <mat-grid-tile>
+        <form class="example-form">
+            <mat-form-field class="example-full-width mat-margin" appearance="outline">
+                <mat-label>Superheroe</mat-label>
+                <input matInput placeholder="Ingrese su búsqueda">
+            </mat-form-field>
+        </form>
+        <button mat-raised-button color="primary" class="">Primary</button>
+    </mat-grid-tile>
+</mat-grid-list>
