--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -28,7 +28,7 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button class="btn-edit" color="accent">
+                <button mat-icon-button class="btn-edit" color="accent" [routerLink]="['/hero/',element.id]">
             <mat-icon>edit</mat-icon>
           </button>
                 <button mat-icon-button color="warn">
