--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -31,7 +31,7 @@
                 <button mat-icon-button class="btn-edit" color="accent" [routerLink]="['/hero/',element.id]">
             <mat-icon>edit</mat-icon>
           </button>
-                <button mat-icon-button color="warn">
+                <button mat-icon-button color="warn" (click)="setHero(element)">
             <mat-icon>delete</mat-icon>
           </button>
             </td>
