--- a/src/app/containers/home/home.component.html
+++ b/src/app/containers/home/home.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="mat-elevation-z8">
-        <app-table [heroesData]="paginateData()" [isLoading]="isLoading"></app-table>
+        <app-table [heroesData]="paginateData()" [isLoading]="isLoading" (showDeleteModal)="showDeleteModal($event)"></app-table>
 
         <mat-paginator [length]="totalHeroes" [pageSize]="paginationData.pageSize" [pageIndex]="paginationData.pageIndex" [pageSizeOptions]="[5, 10, 20]" (page)="changePaginationData($event)">
         </mat-paginator>
