--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary" class="footer">
-    <div class="mat-toolbar-row">
-        <span class="centered-span">Este es el footer</span>
-    </div>
+    <span class="link-small">
+        Made with<span class="icon"> ♥ </span> by
+    <span class="folcode"> Folcode.</span>
+    </span>
 </mat-toolbar>
